--- a/style.css
+++ b/style.css
@@ -74,10 +74,16 @@ body{
     background-color: var(--background-center-clr);
     border-radius: 15px;
 }
-.textbox.input{
+input{
     margin-top: 2px;
     border: inset rgb(118, 118, 118) 2px;
     color: var(--text-clr-light);
+}
+input:focus{
+    margin-top: 5px;
+    outline: 1px solid var(--text-clr-light);
+    border: transparent;
+    box-shadow: 0px 2px 5px -0px lightblue;
 }
 #firstLastName{
     display: flex;
