--- a/style.css
+++ b/style.css
@@ -10,18 +10,25 @@
 body{
     background-color: var(--background-clr);
     margin: 0;
+    min-height: 100vh;
 }
 #containerAll{
+    min-height: 100vh;
     display: flex;
     flex-direction: row;
 }
 #leftContainer{
-    display: flex;
+    position: relative;
+    text-align: center;
+    width: var(--image-width);
+    color: var(--text-clr-light);
+    z-index: 10;
 }
 .card-image{
-    position: relative;
+    display:flex;
+    position: absolute;
     width: var(--image-width);
-    height: max(100vh, 850px);
+    height: 100%;
     object-fit: cover;
     object-position: center bottom;
     z-index: 2;
@@ -46,6 +53,15 @@ body{
 }
 .card-heading{
     margin-right: 35px;
+}
+.reference{
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    width: var(--image-width);
+    bottom: 0px;
+
+    z-index: 10;
 }
 #rightContainer{
     display: flex;
